# sailing-scheduler

./: .gitignore  25_pairs_96_races.tsv  README.md  changeovers.tsv  last_year_schedule.tsv  not_unique_teammates.tsv  pairs.tsv  pyproject.toml  schedule.tsv  schedule_21.tsv  schedule_23.tsv  schedule_23_10_pos_chain.tsv  schedule_23_92_races.tsv  schedule_23_double_up.tsv  schedule_24.tsv  schedule_25.tsv  schedule_high_visibility.tsv  schedule_standard.tsv  sightings.tsv
docs/: BLOCK_DESIGN.md  CONSTRAINT_PROGRAMMING.md  CURRENT_ALGORITHM.md  GENETIC_ALGORITHM.md  SIMULATED_ANNEALING.md  SIT_OUT_ROTATION.md
scripts/: 21_competitors_90_races.tsv  23_92_races.tsv  23_competitors_90_races.tsv  23_double_up.tsv  24_competitors_96_races.tsv  generate_23_competitors_90_races.py  generate_24_competitors_96_races.py  generate_25_competitors_96_races.py  substitute_pairs.py
src/sailing_scheduler/: __init__.py  export.py  generator.py  metrics.py  models.py  validator.py
tests/: __init__.py  test_requirements.py
