[project]
name = "sailing-scheduler"
version = "0.1.0"
description = "Generates schedules for sailing competitions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sailing_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
